compiler/test/fail_compilation/moduleundefuda.d
/*
TEST_OUTPUT:
---
fail_compilation/moduleundefuda.d(9): Error: undefined identifier `undef`
@undef module moduleundefuda;
 ^
---
*/
@undef module moduleundefuda;
